# password-manager

./: Cargo.toml  Dockerfile
.github/workflows/: cd.yml  ci-cd.yml  ci.yml  cleanup-workflow-runs.yml  rust-clippy.yml
data/: passwords.json
src/: main.rs  manager.rs  util.rs
