[package]
name = "password-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
rpassword = "7.3.1"
serde_json = { version = "1.0", default-features = false, features = ["alloc", "std"] }
serde = { version = "1.0.210", features = ["derive"] }